<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_SignIn"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/back"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        android:background="@color/white"
        />
    <TextView
        android:layout_below="@+id/back_SignIn"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textSize="29dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/person_firstname"
        android:id="@+id/firstname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        />
    <TextView
        android:layout_below="@+id/back_SignIn"
        android:layout_marginRight="@+id/firstname"
        android:layout_marginTop="80dp"
        android:textColor="@color/black"
        android:textSize="29dp"
        android:gravity="center"
        android:layout_marginLeft="220dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/person_lastname"
        android:id="@+id/lastname"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        />

    <EditText
        android:id="@+id/firstname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname_hint"
        android:inputType="textPersonName"

        android:layout_marginLeft="20dp"
        android:layout_below="@+id/firstname"
        android:layout_marginRight="@+id/lastname_input"/>
    <EditText
        android:id="@+id/lastname_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"
        android:inputType="textPersonName"

        android:layout_below="@+id/lastname"
        android:layout_marginRight="@+id/firstname_input"
        android:layout_marginLeft="220dp" />

    <TextView
        android:id="@+id/PasswordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:text="@string/password"
        android:layout_below="@id/username_input"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/ConfirmLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="220dp"
        android:text="@string/confirmPassword"
        android:layout_below="@id/username_input"
        android:textSize="@dimen/text_size"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/PasswordLabel"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/confirmPassword_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/ConfirmLabel"
        android:layout_marginRight="@+id/password_input"
        android:layout_marginLeft="200dp"/>

    <EditText
        android:id="@+id/Email_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/EmailLabel"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/EmailLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:text="@string/person_email"
        android:layout_below="@+id/firstname_input"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textUri"
        android:layout_below="@+id/usernameLabel"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/Email_input"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"/>


   <Button
        android:id="@+id/SignIn"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_below="@+id/password_input"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/signUp_name"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textSize="25dp"
        />
</RelativeLayout>
