<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_SignIn"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/back"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:onClick="setContentView" />

    <TextView
        android:layout_below="@+id/back_SignIn"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:textSize="29dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/UsernameLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fontFamily="sans-serif"
        />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:layout_below="@+id/UsernameLabel"
        android:layout_marginLeft="20dp"/>

    <TextView
    android:textColor="@color/black"
    android:textSize="29dp"
    android:gravity="center"
    android:layout_marginLeft="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/password"
    android:id="@+id/PasswordLabel"
    android:layout_below="@+id/username_input"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="25dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@+id/PasswordLabel"
        android:layout_marginLeft="20dp"/>

    <Button
        android:id="@+id/Submit"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_below="@+id/password_input"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="20dp"
        android:text="@string/signIn_name"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textSize="25dp"

        android:onClick="setContentView" />


    <TextView
        android:textColor="@color/black"
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:onClick="setContentView"
        android:clickable="true"
        android:layout_below="@+id/Submit"
        android:gravity="center"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif" />
</RelativeLayout>
